# tam

./: .gitignore  .release.toml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  cliff.toml  design.txt  dist-workspace.toml  elease-plz.toml  release-plz.toml  release.sh  release.toml  theme.toml
.github/workflows/: cd.yml  publish-crates.yml  release-plz.yml  release.yml  rust.yml
src/: app.rs  cli.rs  commands.rs  config.rs  db.rs  file.rs  logs.rs  main.rs  model.rs  query.rs  services.rs  sql.rs  task.rs  theme.rs  ui.rs  utils.rs
src/commands/: config.rs  list.rs  project.rs  task.rs  update.rs
src/services/: project.rs  task.rs
src/ui/: components.rs  kanban.rs  project_screen.rs  task_screen.rs  task_table.rs
wix/: main.wxs
