[package]
name = "tam"
version = "0.1.11"
edition = "2021"
authors = ["wst7 <wstreet7@outlook.com>"]
description = "A tasks manager cli tool"
repository = "https://github.com/wst7/tam"
keywords = ["cli", "task", "todo", "manager"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0" 

[package.metadata.wix]
upgrade-guid = "D4E4B254-252F-4637-8575-7CE513863C8A"
path-guid = "44854E9E-D195-435C-94F5-D0E2A6ECF84F"
license = false
eula = false


[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.28.1"
cursive = { version = "0.21.1", features = ["crossterm-backend", "toml"]}
cursive_table_view = "0.15.0"
dirs = "6.0.0"
rustyline = "15.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
shlex = "1.3.0"
tabled = "0.17.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
