[package]
name = "tam"
version = "0.1.15"
edition = "2021"
authors = ["wst7 <wstreet7@outlook.com>"]
description = "A tasks manager cli tool"
repository = "https://github.com/wst7/tam"
keywords = ["cli", "task", "todo", "manager"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
exclude = [
    "tests/**/*",
    "assets/**/*",
]

[package.metadata.wix]
upgrade-guid = "D4E4B254-252F-4637-8575-7CE513863C8A"
path-guid = "44854E9E-D195-435C-94F5-D0E2A6ECF84F"
license = false
eula = false


[dependencies]
anyhow = "1.0.96"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
cursive = { version = "0.21.1", features = ["toml"]}
dirs = "6.0.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tabled = "0.18.0"
toml = "0.8.20"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
debug = false
