[package]
name = "tam"
version = "0.1.16"
edition = "2021"
authors = ["wst7 <wstreet7@outlook.com>"]
description = "A tasks manager cli tool"
repository = "https://github.com/wst7/tam"
keywords = ["cli", "project", "task", "todo", "manager"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
exclude = ["tests/**/*", "assets/**/*"]

[package.metadata.wix]
upgrade-guid = "D4E4B254-252F-4637-8575-7CE513863C8A"
path-guid = "44854E9E-D195-435C-94F5-D0E2A6ECF84F"
license = false
eula = false


[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tabled = "0.20.0"
toml = "0.8.23"
env_home = "0.1.0"
log = "0.4.27"
log4rs = "1.3.0"
once_cell = "1.21.3"
ratatui = "0.29.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
tui-input = "0.14.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
debug = false
